# bsc-thesis

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  compile.sh  vcpkg.json
assets/buildings/: apartment.json  bikes.json  fruitstand.json  house.json  park.json
assets/grounds/: foliage.json  grass.json  road.json  vehicles.json
assets/meshes/: house.mtl
assets/roads/: road.json
assets/shaders/: default.frag  default.vert  instanced.frag  instanced.vert  instanced_shadow_map.vert  rain.frag  rain.vert  shadow_map.frag  shadow_map.vert
assets/vehicles/: car.json  truck.json
include/: bounding_box.h  camera.h  common.h  context.h  district.h  generator.h  renderer.h  road.h  timer.h  vehicle.h  weather.h  window.h  world.h
include/gfx/: assets.h  frustum.h  geometry.h  mesh.h  obj_loader.h  particles.h  renderer.h
include/gfx/vk/: buffer.h  command.h  depth_buffer.h  descriptor.h  device.h  framebuffer.h  image.h  instance.h  memory_allocator.h  pipeline.h  sampler.h  semaphore.h  shader.h  surface.h  swap_chain.h  vertex.h
include/input/: camera_handler.h  diagnostics_handler.h  element_selection_handler.h  input_manager.h
include/utils/: file_utils.h  hash_utils.h  math_utils.h  random_utils.h  string_utils.h  thread_pool.h
include/wfc/: building.h  ground.h  road.h  rule.h
include/wfc/building/: building.h  flower_shop.h  house.h
scripts/: binary_to_obj.py  obj_to_binary.py
src/: bounding_box.cpp  camera.cpp  context.cpp  district.cpp  generator.cpp  main.cpp  renderer.cpp  road.cpp  timer.cpp  vehicle.cpp  window.cpp  world.cpp
src/gfx/: assets.cpp  frustum.cpp  geometry.cpp  mesh.cpp  obj_loader.cpp  particles.cpp  renderer.cpp
src/gfx/vk/: buffer.cpp  command.cpp  depth_buffer.cpp  descriptor.cpp  device.cpp  framebuffer.cpp  image.cpp  instance.cpp  memory_allocator.cpp  pipeline.cpp  sampler.cpp  semaphore.cpp  shader.cpp  surface.cpp  swap_chain.cpp  vertex.cpp
src/input/: camera_handler.cpp  diagnostics_handler.cpp  element_selection_handler.cpp  input_manager.cpp
src/utils/: file_utils.cpp  string_utils.cpp
src/wfc/: building.cpp  ground.cpp
src/wfc/building/: building.cpp  flower_shop.cpp  house.cpp
tests/: CMakeLists.txt  basic_test.cpp  bounding_box_test.cpp  road_test.cpp
tests/gfx/: frustum_test.cpp  geometry_test.cpp
tests/graphics/: geometry_test.cpp
tests/utils/: hash_utils_test.cpp  math_utils_test.cpp  string_utils_test.cpp
tests/wfc/: rule_test.cpp
